Bug 156847 - Transparency in drop-down lists Line and Width on Sidebar
Summary: Transparency in drop-down lists Line and Width on Sidebar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
: 157692 (view as bug list)
Depends on:
Blocks: Sidebar-Properties
  Show dependency treegraph
 
Reported: 2023-08-21 17:53 UTC by Roman Kuznetsov
Modified: 2023-10-13 23:01 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshots showing the problem (51.44 KB, image/png)
2023-08-21 20:28 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2023-08-21 17:53:40 UTC
Description:
Transparency in drop-down lists Line and Width on Sidebar 

Steps to Reproduce:
1. Open Writer or Calc
2. Draw any shape
3. Select it
4. Open Sidebar, Properties tab
5. Look at Line and Width drop-down lists => there is some strange transparency

Actual Results:
Transparency in drop-down lists Line and Width on Sidebar 

Expected Results:
drop-down lists Line and Width look as normal


Reproducible: Always


User Profile Reset: No

Additional Info:
repro in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e26aeb882dd236adf19679d5df9b7ba5da1ed226
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded

and in 

Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 69edd8b8ebc41d00b4de3915dc82f8f0fc3b6265
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL threaded

no repro in

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL threaded

regression
Comment 1 Rafael Lima 2023-08-21 20:28:10 UTC
Created attachment 189084 [details]
Screenshots showing the problem

I can confirm the issue in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6fa4e5965b2a79ae6735f4191a2261713a42356e
CPU threads: 12; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+wayland)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 2 Patrick (volunteer) 2023-08-22 17:58:06 UTC
I can reproduce this as well with my local macOS master build and running with Skia/Metal, Skia/Raster, and Skia disabled.
Comment 3 Rafael Lima 2023-08-22 19:04:43 UTC
I had accidentally assigned it to myself. Changing it to NEW.
Comment 4 raal 2023-08-23 06:13:00 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.6.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 3ac324026fc1017e9cace6851eb6ea740b3a5a6f is the first bad commit
commit 3ac324026fc1017e9cace6851eb6ea740b3a5a6f
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Jun 6 19:43:51 2023 +0200

    source 1527fa8435ef415678b2e4a6972f5e378ee5cab1

152649: convert SvtAccessibilityOptions to officecfg where possible | https://gerrit.libreoffice.org/c/core/+/152649
Comment 5 Commit Notification 2023-08-24 07:53:35 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bff6a734dd4c2d5572a10f39a3a8dd5313c2278a

tdf#156847 Transparency in drop-down lists Line and Width on Sidebar

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-10-04 08:03:09 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/5622b8df08b8be6ece0355b8e918b70f7f54ef44

tdf#156847 Transparency in drop-down lists Line and Width on Sidebar

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Stéphane Guillou (stragu) 2023-10-13 22:56:25 UTC
*** Bug 157692 has been marked as a duplicate of this bug. ***