tdf#156847 Transparency in drop-down lists Line and Width on Sidebar

regression from
    commit 1527fa8435ef415678b2e4a6972f5e378ee5cab1
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Jun 6 11:20:17 2023 +0200
    convert SvtAccessibilityOptions to officecfg where possible
where the method call returns a std::optional<bool> which is translated
to a bool, resulting a true value from an optional<false>

Change-Id: I2182cae5172798f38194ee86dbb32ef65e3e24be
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155974
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>